feat(lesson 8): Add final changes
